# Argus

./: README.md
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  main.py  models.py
backend/app/routers/: dashboard.py  datasets.py  jobs.py  kpis.py  projects.py  reports.py
backend/app/services/: database.py  kpi_engine.py  llm.py  profiler.py  queue.py  storage.py
backend/app/worker/: main.py
backend/tests/: test_kpi_engine.py  test_models.py  test_profiler.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/pages/: DashboardPage.tsx  KPIApprovalPage.tsx  ReportPage.tsx  UploadPage.tsx
infra/cloudformation/: template.yaml
